# SVM_example

./: CMakeLists.txt  README.md  SVM_readme.txt  svm_test.cpp
